Add Java unit tests for UserService - all tests passing
Co-authored-by: congiuluc <9011632+congiuluc@users.noreply.github.com>