@@ -33,7 +33,8 @@ public class UserServiceDemo {
      */
     public List<User> getActiveUsers() {
         // DEMO TODO: Delete implementation and type above
-        // return getAllUsers().stream().filter(u -> u.getIsActive()).toList();
+        // return getAllUsers().stream().filter(u -> u.getIsActive()).collect(java.util.stream.Collectors.toList());
+        return null;
     }
 
     /**
@@ -46,7 +47,8 @@ public class UserServiceDemo {
         // return getAllUsers().stream()
         //    .filter(u -> u.getIsActive())
         //    .filter(u -> u.getDepartment().equals(department))
-        //    .toList();
+        //    .collect(java.util.stream.Collectors.toList());
+        return null;
     }
 
     /**
@@ -56,7 +58,7 @@ public class UserServiceDemo {
      */
     public List<String> getUserNames() {
         // DEMO TODO: Delete implementation and type above
-        return getAllUsers().stream().map(u -> u.getName()).toList();
+        return getAllUsers().stream().map(u -> u.getName()).collect(java.util.stream.Collectors.toList());
     }
 
     /**
@@ -71,6 +73,7 @@ public class UserServiceDemo {
         //        User::getDepartment,
         //        java.util.stream.Collectors.counting()
         //    ));
+        return null;
     }
 
     private List<User> getAllUsers() {
